Fixed layout issues

--- a/application.css
+++ b/application.css
@@ -33,6 +33,9 @@ body {
   -webkit-font-smoothing: antialiased;
   background: #04B7B1;
 }
+.clear {
+  clear: both;
+}
 .inner{
   max-width: 870px;
   margin: 0 auto;
@@ -44,6 +47,7 @@ body {
   font-size: 25px;
   line-height: 23px;
   padding: 20px 0 18px;
+  text-align: left;
 }
 .banner .lang {
   float: right;
@@ -57,13 +61,14 @@ body {
   background: white;
 }
 h1 {
-  font-size: 80px;
+  font-size: 70px;
   line-height: 76px;
   padding: 40px 0 30px;
   display: block;
   margin: 0 auto;
   color: black;
   position: relative;
+  text-align: center;
 }
 h2 {
   color: #333;
@@ -424,6 +429,17 @@ p {
   }
 }
 @media (max-width: 750px) {
+  h1 {
+    font-size: 40px;
+    line-height: 50px;
+  }
+  .banner {
+    text-align: center;
+  }
+  .banner .lang {
+    float: none;
+    margin-top: 10px;
+  }
   .drawings .inner {
     flex-direction: column;
     margin-bottom: 0;
@@ -461,6 +477,13 @@ p {
   }
 }
 @media (max-width: 590px) {
+  h1 {
+    font-size: 30px;
+    line-height: 40px;
+  }
+  h1.large {
+    font-size: 34px;
+  }
   .menu{
     max-width: 500px;
   }
